# shm

./: .clang-format  CMakeLists.linux.cmake  CMakeLists.msvc.cmake  CMakeLists.txt  LICENSE  README.md
gsl/: CMakeLists.txt  README.md
sharedmemory/: CMakeLists.txt
sharedmemory/include/sharedmemory/: errnoexception.h  mmap.h  sharedmemory.h  shmopen.h
sharedmemory/src/: errnoexception.cc  mmap.cc  shmopen.cc
sharedmemory/tests/: sharedmemory_test.cc
